WIP Page Customs

--- a/parcours.html
+++ b/parcours.html
@@ -50,14 +50,14 @@
                 <a href="projart.html"><button><span>PROJETS ARTISTIQUES.</span></button></a>
             </div>
             <div class="text9">
-                <button>CUSTOMS.</button>
+                <a href="customs.html"><button><span>CUSTOMS.</span></button></a>
             </div>
             <div class="text10">
                 <button>GRAPHISME.</button>
             </div>
-            <div class="text11">
+            <!-- <div class="text11">
                 <button>MOBILIER.</button>
-            </div>
+            </div>-->
            <!-- <div class="text12">
                 <button>ART DIGITAL.</button>
             </div>-->
