--- a/projart.html
+++ b/projart.html
@@ -59,14 +59,14 @@
                 <a href="projart.html"><button><span>PROJETS ARTISTIQUES.</span></button></a>
             </div>
            <div class="text9">
-                <button>CUSTOMS.</button>
+            <a href="customs.html"><button><span>CUSTOMS.</span></button></a>
             </div>
             <div class="text10">
                 <button>GRAPHISME.</button>
             </div>
-            <div class="text11">
+           <!-- <div class="text11">
                 <button>MOBILIER.</button>
-            </div>
+            </div>-->
            <!-- <div class="text12">
                 <button>ART DIGITAL.</button>
             </div>-->
@@ -108,6 +108,14 @@
                         <img src="Images/Projets Art/Art Digital/Ailes.png" alt="Crayon Ailé" class="thumbnail" data-description="Concept pour un tatouage<br><br>Dessin réalisé sur tablette avec l'application Affinity Designer.<br><br>Composition sur mesures.">
                         <img src="Images/Projets Art/Art Digital/MotoCarre.jpg" alt="Floral Motocross" class="thumbnail" data-description="Dessin réalisé sur tablette avec l'application Procreate.<br><br>Idéal comme fond d'écran de tablette ou de téléphone. Peut également être imprimé.">
                         <img src="Images/Projets Art/Art Digital/Geometric.png" alt="Geometric Rose" class="thumbnail" data-description="Concept pour un tatouage<br><br>Dessin réalisé sur tablette avec l'application Affinity Designer.<br><br>Mélange de style entre le géométrique et le traditionnel. Composition pour être tatouer à l'arrière de la jambe ou le long de la colonne vertébrale.">
+                    </div>
+                    <button class="category-btn" data-category="category4">MOBILIER.</button>
+                    <div class="thumbnails-containerG" id="thumbnails-category4">
+                        <!-- Vignettes de la catégorie 4 -->
+                        <img src="Images/Projets Art/Mobilier/Bar.jpg" alt="Bar" class="thumbnail" data-description="Réalisation d'une plaque murale avec découpes faites à la main des lettrages ainsi que des encadrements. Patine bronze réalisée à la brosse.">
+                        <img src="Images/Projets Art/Mobilier/Frigo.jpg" alt="Frigeco 50's" class="thumbnail" data-description="Récupération d'un ancien frigo de la marque Frigeco des années 50. Transformation en meuble bar sans réfrigération. Aménagement intérieur et peintures faites par mes soins.">
+                        <img src="Images/Projets Art/Mobilier/Porte.jpg" alt="Porte Florale" class="thumbnail" data-description="Réalisation d'une peinture décorative sur une porte.">
+                        <img src="Images/Projets Art/Mobilier/Table.jpg" alt="Table" class="thumbnail" data-description="Cette peinture a été réalisé sur une table basse.">
                     </div>
                 </div>
                 <div class="gallery">
