--- a/customs.html
+++ b/customs.html
@@ -59,14 +59,14 @@
                 <a href="projart.html"><button><span>PROJETS ARTISTIQUES.</span></button></a>
             </div>
            <div class="text9">
-                <button>CUSTOMS.</button>
+            <a href="customs.html"><button><span>CUSTOMS.</span></button></a>
             </div>
             <div class="text10">
                 <button>GRAPHISME.</button>
             </div>
-            <div class="text11">
+            <!--<div class="text11">
                 <button>MOBILIER.</button>
-            </div>
+            </div>-->
            <!-- <div class="text12">
                 <button>ART DIGITAL.</button>
             </div>-->
@@ -99,6 +99,57 @@
                 <button class="category-btn" data-category="category2">PROCESSUS DE LA COMMANDE</button>
                 <div class="thumbnails-containerG" id="thumbnails-category2">
 
+                </div> 
+                <button class="category-btn" data-category="category3">FLASH/MODELES DISPONIBLES</button>
+                <div class="thumbnails-containerG" id="thumbnails-category3">
+                    <div class="explic">
+                        <h1>Les flashs sont des modèles que j'ai créé pour vous sans que vous ayez à me les demander. A la différence des customs sur mesures, ils peuvent être réalisé plusieurs fois et vous ne serez donc pas le seul à avoir ce custom. Il restera tout de même unique car ils sont réalisés à la main.</h1>
+                    </div>
+                   <div class="photo">
+                        <img src="Images/Customs/Love.jpg" alt="" class="thumbnail" data-description="">
+                    </div>
+                    <div class="photo">
+                        <img src="Images/Customs/Blues Brothers.jpg" alt="" class="thumbnail" data-description="">
+                    </div>
+                    <div class="photo">
+                        <img src="Images/Customs/Il en faut.jpg" alt="" class="thumbnail" data-description="">
+                    </div>
+                    <div class="photo">
+                        <img src="Images/Customs/Scooby.jpg" alt="" class="thumbnail" data-description="">
+                    </div>
+                    <div class="photo">
+                        <img src="Images/Customs/Smile.jpg" alt="" class="thumbnail" data-description="">
+                    </div>
+                    <div class="photo">
+                        <img src="Images/Customs/Glitter Love.jpg" alt="" class="thumbnail" data-description="">
+                    </div>
+                    <div class="photo">
+                        <img src="Images/Customs/Lumière.jpg" alt="" class="thumbnail" data-description="">
+                    </div>
+                </div> 
+                <button class="category-btn" data-category="category4">POUR VOUS INSPIRER</button>
+                <div class="thumbnails-containerG" id="thumbnails-category4">
+                    <div class="photo">
+                        <img src="Images/Customs/Love.jpg" alt="" class="thumbnail" data-description="">
+                    </div>
+                    <div class="photo">
+                        <img src="Images/Customs/Blues Brothers.jpg" alt="" class="thumbnail" data-description="">
+                    </div>
+                    <div class="photo">
+                        <img src="Images/Customs/Il en faut.jpg" alt="" class="thumbnail" data-description="">
+                    </div>
+                    <div class="photo">
+                        <img src="Images/Customs/Scooby.jpg" alt="" class="thumbnail" data-description="">
+                    </div>
+                    <div class="photo">
+                        <img src="Images/Customs/Smile.jpg" alt="" class="thumbnail" data-description="">
+                    </div>
+                    <div class="photo">
+                        <img src="Images/Customs/Glitter Love.jpg" alt="" class="thumbnail" data-description="">
+                    </div>
+                    <div class="photo">
+                        <img src="Images/Customs/Lumière.jpg" alt="" class="thumbnail" data-description="">
+                    </div>
                 </div> 
         </div>
     </div>   
