--- a/portfolio.html
+++ b/portfolio.html
@@ -76,14 +76,14 @@
                     <a href="projart.html"><button><span>PROJETS ARTISTIQUES.</span></button></a>
                 </div>
                 <div class="text9 button2">
-                    <button>CUSTOMS.</button>
+                    <a href="customs.html"><button><span>CUSTOMS.</span></button></a>
                 </div>
                 <div class="text10 button2">
                     <button>GRAPHISME.</button>
                 </div>
-                <div class="text11 button2">
+                <!--<div class="text11 button2">
                     <button>MOBILIER.</button>
-                </div>
+                </div>-->
                 <!--<div class="text12 button2">
                     <button>ART DIGITAL.</button>
                 </div>-->
