--- a/customs.html
+++ b/customs.html
@@ -86,69 +86,61 @@
             <div class="menu">
                 <button class="category-btn" data-category="category1">FORFAITS</button>
                 <div class="thumbnails-containerG" id="thumbnails-category1">
-                    <div class="forfait"></div>
-                    <div class="forfait"></div>
-                    <div class="forfait"></div>
+                        <div class="forfait">
+                            <div class="textfT">
+                                <h1>Basic</h1>
+                                <div class="wave"></div>
+                            </div>
+                        </div>
+                        <div class="forfait">
+                            <div class="textfT">
+                                <h1>Silver</h1>
+                                <div class="wave"></div>
+                            </div>
+                        </div>
+                        <div class="forfait">
+                            <div class="textfT">
+                                <h1>Prenium</h1>
+                                <div class="wave"></div>
+                            </div>
+                        </div>
                 </div> 
                 <button class="category-btn" data-category="category2">PROCESSUS DE LA COMMANDE</button>
-                <div class="thumbnails-containerG" id="thumbnails-category2"></div> 
+                <div class="thumbnails-containerG" id="thumbnails-category2">
+
+                </div> 
                 <button class="category-btn" data-category="category3">FLASH/MODELES DISPONIBLES</button>
                 <div class="thumbnails-containerG" id="thumbnails-category3">
-                    <div class="explic">
-                        <h1>Les flashs sont des modèles que j'ai créé pour vous sans que vous ayez à me les demander. À la différence des customs sur mesures, ils peuvent être réalisés plusieurs fois et vous ne serez donc pas le seul à avoir ce custom. Il restera tout de même unique car ils sont réalisés à la main.</h1>
-                    </div>
-                    <div class="gallery">
-                        <div class="photo">
-                            <img src="Images/Customs/Love.jpg" alt="Love" class="thumbnail" data-description="">
+                    <div class="containerP">
+                        <div class="explic">
+                            <h1>Les flashs sont des modèles que j'ai créé pour vous sans que vous ayez à me les demander. A la différence des customs sur mesures, ils peuvent être réalisé plusieurs fois et vous ne serez donc pas le seul à avoir ce custom. Il restera tout de même unique car ils sont réalisés à la main.</h1>
                         </div>
+                    
                         <div class="photo">
-                            <img src="Images/Customs/Blues Brothers.jpg" alt="Blues Brothers" class="thumbnail" data-description="">
+                            <img src="Images/Customs/Love.jpg" alt="" class="thumbnail" data-description="">
+                            <img src="Images/Customs/Blues Brothers.jpg" alt="" class="thumbnail" data-description="">
+                            <img src="Images/Customs/Il en faut.jpg" alt="" class="thumbnail" data-description="">
+                            <img src="Images/Customs/Scooby.jpg" alt="" class="thumbnail" data-description="">
+                            <img src="Images/Customs/Smile.jpg" alt="" class="thumbnail" data-description="">
+                            <img src="Images/Customs/Glitter Love.jpg" alt="" class="thumbnail" data-description="">
+                            <img src="Images/Customs/Lumière.jpg" alt="" class="thumbnail" data-description="">
                         </div>
-                        <div class="photo">
-                            <img src="Images/Customs/Il en faut.jpg" alt="Il en faut" class="thumbnail" data-description="">
-                        </div>
-                        <div class="photo">
-                            <img src="Images/Customs/Scooby.jpg" alt="Scooby" class="thumbnail" data-description="">
-                        </div>
-                        <div class="photo">
-                            <img src="Images/Customs/Smile.jpg" alt="Smile" class="thumbnail" data-description="">
-                        </div>
-                        <div class="photo">
-                            <img src="Images/Customs/Glitter Love.jpg" alt="Glitter Love" class="thumbnail" data-description="">
-                        </div>
-                        <div class="photo">
-                            <img src="Images/Customs/Lumière.jpg" alt="Lumière" class="thumbnail" data-description="">
-                        </div>
-                    </div>
+                    </div> 
                 </div> 
                 <button class="category-btn" data-category="category4">POUR VOUS INSPIRER</button>
                 <div class="thumbnails-containerG" id="thumbnails-category4">
-                    <div class="gallery">
-                        <div class="photo">
-                            <img src="Images/Customs/Love.jpg" alt="Love" class="thumbnail" data-description="">
-                        </div>
-                        <div class="photo">
-                            <img src="Images/Customs/Blues Brothers.jpg" alt="Blues Brothers" class="thumbnail" data-description="">
-                        </div>
-                        <div class="photo">
-                            <img src="Images/Customs/Il en faut.jpg" alt="Il en faut" class="thumbnail" data-description="">
-                        </div>
-                        <div class="photo">
-                            <img src="Images/Customs/Scooby.jpg" alt="Scooby" class="thumbnail" data-description="">
-                        </div>
-                        <div class="photo">
-                            <img src="Images/Customs/Smile.jpg" alt="Smile" class="thumbnail" data-description="">
-                        </div>
-                        <div class="photo">
-                            <img src="Images/Customs/Glitter Love.jpg" alt="Glitter Love" class="thumbnail" data-description="">
-                        </div>
-                        <div class="photo">
-                            <img src="Images/Customs/Lumière.jpg" alt="Lumière" class="thumbnail" data-description="">
-                        </div>
+                    <div class="photo">
+                        <img src="Images/Customs/Love.jpg" alt="" class="thumbnail" data-description="">
+                        <img src="Images/Customs/Blues Brothers.jpg" alt="" class="thumbnail" data-description="">
+                        <img src="Images/Customs/Il en faut.jpg" alt="" class="thumbnail" data-description="">
+                        <img src="Images/Customs/Scooby.jpg" alt="" class="thumbnail" data-description="">
+                        <img src="Images/Customs/Smile.jpg" alt="" class="thumbnail" data-description="">
+                        <img src="Images/Customs/Glitter Love.jpg" alt="" class="thumbnail" data-description="">
+                        <img src="Images/Customs/Lumière.jpg" alt="" class="thumbnail" data-description="">
                     </div>
                 </div> 
-            </div>
-        </div>     
-        <script src="JS/script.js"></script>
+        </div>
+    </div>   
+            <script src="JS/script.js"></script>
 </body>
 </html>
