finalisation page customs

--- a/customs.html
+++ b/customs.html
@@ -89,25 +89,74 @@
                         <div class="forfait">
                             <div class="textfT">
                                 <h1>Basic</h1>
-                                <div class="wave"></div>
+                            </div>
+                            <div class="wave"></div>
+                            <div class="textfAP">
+                                <h1>à partir de</h1>
+                            </div>
+                            <div class="textfP">
+                                <h1>30€</h1>
+                            </div>
+                            <div class="textfTy">
+                                <h1>Design simple</h1>
+                            </div>
+                            <div class="textfD">
+                                <h1>Exemples:<br>Texte ou ornement simple<br>Fond uni ou pailleté<br> <br></h1>
+                            </div>
+                            <div class="photof">
+                                <img src="Images/Customs/Il en faut.jpg" alt="" class="photof" data-description="">
                             </div>
                         </div>
                         <div class="forfait">
                             <div class="textfT">
                                 <h1>Silver</h1>
-                                <div class="wave"></div>
+                            </div>
+                            <div class="wave"></div>
+                            <div class="textfAP">
+                                <h1>à partir de</h1>
+                            </div>
+                            <div class="textfP">
+                                <h1>50€</h1>
+                            </div>
+                            <div class="textfTy">
+                                <h1>Design avec éléments</h1>
+                            </div>
+                            <div class="textfD">
+                                <h1>Exemples:<br>Ornements complexes<br>Plusieurs éléments à combiner<br>Différentes peintures ou paillettes</h1>
+                            </div>
+                            <div class="photof">
+                                <img src="Images/Customs/Smile.jpg" alt="" class="photof" data-description="">
                             </div>
                         </div>
                         <div class="forfait">
                             <div class="textfT">
                                 <h1>Prenium</h1>
-                                <div class="wave"></div>
+                            </div>
+                            <div class="wave"></div>
+                            <div class="textfAP">
+                                <h1>à partir de</h1>
+                            </div>
+                            <div class="textfP">
+                                <h1>90€</h1>
+                            </div>
+                            <div class="textfTy">
+                                <h1>Design Complexe</h1>
+                            </div>
+                            <div class="textfD">
+                                <h1>Exemples:<br>Inclus les éléments du forfait Silver<br>avec de personnages<br> <br></h1>
+                            </div>
+                            <div class="photof">
+                                <img src="Images/Customs/Scooby.jpg" alt="" class="photof" data-description="">
                             </div>
                         </div>
                 </div> 
                 <button class="category-btn" data-category="category2">PROCESSUS DE LA COMMANDE</button>
                 <div class="thumbnails-containerG" id="thumbnails-category2">
-
+                    <div class="explic">
+                        <h1>Chaque personnalisation est unique, je vous propose donc de remplir le formulaire en bas de la page pour que vous m’expliquiez votre projet.
+                            <br> <br>
+                            Je l’étudie puis vous recontacte pour vous donner le prix, le délais ainsi qu’un montage du résultat pour que vous le validiez. Une fois le modèle validé, je crée une fiche article sur mon site, accessible uniquement grâce à un mot de passe que je vous communiquerai pour que vous procédiez au paiement. Ensuite, je réalise votre coque et vous l’expédie.</h1>
+                    </div>
                 </div> 
                 <button class="category-btn" data-category="category3">FLASH/MODELES DISPONIBLES</button>
                 <div class="thumbnails-containerG" id="thumbnails-category3">
