--- a/projart.html
+++ b/projart.html
@@ -62,7 +62,7 @@
             <a href="customs.html"><button><span>CUSTOMS.</span></button></a>
             </div>
             <div class="text10">
-                <button>GRAPHISME.</button>
+                <a href="graphisme.html"><button><span>GRAPHISME.</span></button></a>
             </div>
            <!-- <div class="text11">
                 <button>MOBILIER.</button>
