--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
                     <a href="customs.html"><button><span>CUSTOMS.</span></button></a>
                 </div>
                 <div class="text10 button2">
-                    <button>GRAPHISME.</button>
+                    <a href="graphisme.html"><button><span>GRAPHISME.</span></button></a>
                 </div>
                 <!--<div class="text11 button2">
                     <button>MOBILIER.</button>
