--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <a href="accueil.html"><button><span>Accueil</span></button></a>
                 <a href="portfolio.html"><button><span>Portfolio</span></button></a>
                 <a href="https://boutique.pchartdesign.com"><button><span>Boutique</span></button></a>
-                <button>Contact</button>
+                <a href="contact.html"><button><span>Contact</span></button></a>
             </div>
         </div>
     </div>
