--- a/parcours.html
+++ b/parcours.html
@@ -38,7 +38,7 @@
                 <a href="https://boutique.pchartdesign.com"><button><span>Boutique</span></button></a>
             </div>
             <div class="boutons3">
-                <button>Contact</button>
+                <a href="contact.html"><button><span>Contact</span></button></a>
             </div>
             <div class="text6">
                 <h1>MON PARCOURS.</h1>
