--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
                 <a href="https://boutique.pchartdesign.com"><button><span>Boutique</span></button></a>
             </div>
             <div class="boutons3">
-                <button>Contact</button>
+                <a href="contact.html"><button><span>Contact</span></button></a>
             </div>
             <div class="pink-square0"></div> <!-- Cercle bleu ajouté -->
             <div class="pink-square1"></div> <!-- Cercle bleu ajouté -->
