--- a/accueil.html
+++ b/accueil.html
@@ -39,7 +39,7 @@
                 <a href="https://boutique.pchartdesign.com"><button><span>Boutique</span></button></a>
             </div>
             <div class="boutons3">
-                <button>Contact</button>
+                <a href="contact.html"><button><span>Contact</span></button></a>
             </div>
             <div class="animated-container2">
                 <h1>CRÉATIVE.</h1>
